<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/server_ip_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etIp"
        android:hint="@string/server_ip_hint"
        android:inputType="text"
        android:autofillHints="noAutofill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/server_port_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etPort"
        android:hint="@string/server_port_hint"
        android:inputType="number"
        android:autofillHints="noAutofill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
