<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnTheme"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/ic_theme"
        android:contentDescription="@string/theme_switch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnLanguage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:src="@drawable/flag_hu"
        android:contentDescription="@string/lang_switch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtCurrentServer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_server"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnCikktorzs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cikktorzs"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnArellenorzes"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/btnArellenorzes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_arellenorzes"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCikktorzs"
        app:layout_constraintBottom_toTopOf="@+id/btnMegrendeles" />

    <Button
        android:id="@+id/btnMegrendeles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_megrendeles"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnArellenorzes"
        app:layout_constraintBottom_toTopOf="@+id/btnLeltar" />

    <Button
        android:id="@+id/btnLeltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_leltar"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMegrendeles"
        app:layout_constraintBottom_toTopOf="@+id/btnServerSettings" />

    <Button
        android:id="@+id/btnServerSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_server_settings"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLeltar"
        app:layout_constraintBottom_toTopOf="@id/txtCurrentServer" />

</androidx.constraintlayout.widget.ConstraintLayout>
